@@ -1,5 +1,10 @@
 package com.example.oyl.jwt;
 
+import com.example.oyl.domain.User;
+import com.example.oyl.domain.UserRole;
+import com.example.oyl.exception.CustomException;
+import com.example.oyl.exception.ErrorCode;
+import com.example.oyl.repository.UserRepository;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import jakarta.servlet.FilterChain;
@@ -13,10 +18,22 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import java.io.IOException;
 import java.security.Key;
 import java.util.Collections;
+import java.util.List;
 
 public class JwtFilter extends OncePerRequestFilter {
 
+    private final UserRepository userRepository;
     private static final Key key = JwtUtil.getSigningKey();
+
+    public JwtFilter(UserRepository userRepository) {
+        this.userRepository = userRepository; // 주입
+    }
+
+    @Override
+    protected boolean shouldNotFilter(HttpServletRequest request) throws ServletException {
+        String path = request.getRequestURI();
+        return path.equals("/api/users/login") || path.equals("/api/users/signup");
+    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -34,14 +51,22 @@ public class JwtFilter extends OncePerRequestFilter {
                         .parseClaimsJws(token)
                         .getBody();
 
-                String username = claims.getSubject();
+                String email = claims.getSubject();
 
-                // ✅ 인증 정보 SecurityContext에 등록
+                // DB에서 사용자 조회
+                User user = userRepository.findByEmail(email)
+                        .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
+
+                // 권한 문자열 얻기 ("ROLE_USER" 또는 "ROLE_ADMIN")
+                String role = UserRole.fromCode(user.getUserRole());
+
+                // 인증 객체 만들 때 권한 넣기!
                 UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(username, null, Collections.emptyList());
+                        new UsernamePasswordAuthenticationToken(email, null, List.of(() -> role));
+
                 SecurityContextHolder.getContext().setAuthentication(authentication); // 인증된 사용자라고 알려주는 역할
 
-                request.setAttribute("username", username);
+                request.setAttribute("username", email);
 
             } catch (Exception e) {
                 response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Invalid Token");
